[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scrape-links"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "requests",
  "beautifulsoup4",
  "html2text",
  "readability-lxml",
  "newspaper3k",
  "trafilatura"
]

[tool.setuptools]
py-modules = ["scrape_links"]

[project.scripts]
scrape-links = "scrape_links:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0"
]
